src/objects/Tax_To_Account_Mapping__c.object
<CustomObject>
    <description>This object contains the mapping records for each tax, service charge, and use tax when they are mapped to a Financial Account.</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Accounts__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Financial Accounts</label>
        <referenceTo>Financial_Account__c</referenceTo>
        <relationshipLabel>Tax To Account Mappings</relationshipLabel>
        <relationshipName>Tax_To_Account_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Charge_Value__c</fullName>
        <description>Service Charge Value</description>
        <label>Service Charge Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Charge__c</fullName>
        <description>Service Charge Names</description>
        <label>Service Charge</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Value__c</fullName>
        <description>Tax Value</description>
        <label>Tax Value</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <label>Tax</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UseTax_Name__c</fullName>
        <label>UseTax Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UseTax_Value__c</fullName>
        <label>UseTax Value</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Tax To Account Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Financial_Accounts__c</columns>
        <columns>Service_Charge__c</columns>
        <columns>Service_Charge_Value__c</columns>
        <columns>Tax__c</columns>
        <columns>Tax_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Tax-Acc-{000000}</displayFormat>
        <label>TaxToAccountMapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tax To Account Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>